<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"  >
<!--    tools:context=".StoperFragment"-->


    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="0:00:00"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="50sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/start"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/stop"
            android:layout_marginHorizontal="10dp"/>


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:text="@string/save"
            android:layout_marginHorizontal="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="16sp"
            android:gravity="right"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=".."
            android:textSize="16sp"
            android:layout_gravity="left"
            android:gravity="left"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutLastTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lastTime"
            android:textSize="16sp"
            android:gravity="right"
            android:paddingRight="10dp"/>

        <TextView
            android:id="@+id/tvLastResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=".."
            android:textSize="16sp"
            android:layout_gravity="left"
            android:gravity="left"/>
    </LinearLayout>

    <!--        android:onClick="onClickStart"-->


    <!--    android:onClick="onClickStop"-->
    <!--    android:onClick="onClickReset"-->

</LinearLayout>